WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311581
AX: WebKit fails to stitch text across inline element boundaries (e.g. abbr-element) and after atomic inlines (e.g. buttons)
https://bugs.webkit.org/show_bug.cgi?id=311581
Summary
AX: WebKit fails to stitch text across inline element boundaries (e.g. abbr-e...
Tyler Wilcock
Reported
2026-04-06 12:15:34 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-06 12:15:40 PDT
<
rdar://problem/174178906
>
Tyler Wilcock
Comment 2
2026-04-06 12:20:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62136
EWS
Comment 3
2026-04-06 20:56:41 PDT
Committed
310683@main
(dcde9818cd6e): <
https://commits.webkit.org/310683@main
> Reviewed commits have been landed. Closing PR #62136 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug