Source/WebCore/accessibility/AXStitchUtilities.cpp
@@ -50,7 +50,7 @@ static bool hasStitchBreakingRole(Element& element)
 {
     return hasAnyRole(element, {
         // Cell roles
-        "gridcell"_s, "cell"_s, "columnheader"_s, "rowheader"_s
+        "gridcell"_s, "cell"_s, "columnheader"_s, "rowheader"_s,
         // Miscellaneous roles
         "suggestion"_s, "insertion"_s, "deletion"_s
     });
@@ -76,7 +76,7 @@ static bool isStitchBreakingElement(Element& element)
     || hasStitchBreakingTag(element);
 }
 
-bool shouldStopStitchingAt(const RenderObject& renderer, const AccessibilityObject& object, StitchingContext& context)
+StitchAction stitchActionFor(const RenderObject& renderer, const AccessibilityObject& object, StitchingContext& context)
 {
     auto isInsideLink = [] (const RenderObject& renderer) {
         return renderer.style().insideLink() != InsideLink::NotInside;
@@ -84,7 +84,7 @@ bool shouldStopStitchingAt(const RenderObject& renderer, const AccessibilityObje
 
     if (context.lastRenderer && isInsideLink(renderer) && !isInsideLink(*context.lastRenderer)) {
         // Stop the current stitch when entering a link.
-        return true;
+        return StitchAction::BreakAndSkip;
     }
 
     if (renderer.parent() && (renderer.parent()->isBeforeOrAfterContent() || renderer.parent()->isFirstLetter())) {
@@ -92,14 +92,14 @@ bool shouldStopStitchingAt(const RenderObject& renderer, const AccessibilityObje
         // some of our code that handles stitched text (e.g. stringValue) assumes
         // the presence of a Node. For now, stop stitching at generated content.
         // Ideally we remove this restriction in the future.
-        return true;
+        return StitchAction::BreakAndSkip;
     }
 
     if (hasEnclosingInputElement(renderer.node())) {
         // Don't stitch within text inputs. One example of why we want to avoid
         // this is otherwise the number values of the chosen dates will get stitched
         // with the "/"s that surround them, which is a poor user experience.
-        return true;
+        return StitchAction::BreakAndSkip;
     }
 
     RefPtr node = renderer.node();
@@ -128,7 +128,7 @@ bool shouldStopStitchingAt(const RenderObject& renderer, const AccessibilityObje
     while (currentAncestor) {
         if (currentAncestor->owners().size()) {
             stitchBreakingAncestor = nullptr;
-            return true;
+            return StitchAction::BreakAndSkip;
         }
 
         if (currentAncestor == context.containingBlockFlowObject) {
@@ -148,10 +148,11 @@ bool shouldStopStitchingAt(const RenderObject& renderer, const AccessibilityObje
 
     if (node && context.lastStitchBreakingAncestor && context.lastStitchBreakingAncestor != stitchBreakingAncestor) {
         // Breaking stitching across semantic boundaries, like cells, controls, etc.
-        return true;
+        // The current text is on the other side of the boundary and can start a new group.
+        return StitchAction::BreakAndAdd;
     }
 
-    return false;
+    return StitchAction::Continue;
 }
 
 } // namespace WebCore
